--- a/SimplifiedPrototype/bower.json
+++ b/SimplifiedPrototype/bower.json
@@ -18,6 +18,9 @@
     "tests"
   ],
   "dependencies": {
-    "three.js": "~0.71.0"
+    "three.js": "~0.71.0",
+    "requirejs": "~2.1.20",
+    "rxjs": "~2.5.2",
+    "ramda": "~0.17.1"
   }
 }
