--- a/SimplifiedPrototype/bower.json
+++ b/SimplifiedPrototype/bower.json
@@ -21,6 +21,7 @@
     "three.js": "~0.71.0",
     "requirejs": "~2.1.20",
     "rxjs": "~2.5.2",
-    "ramda": "~0.17.1"
+    "ramda": "~0.17.1",
+    "tweenjs": "*"
   }
 }
